[package]
name = "marketplace_sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.25.0" }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
    "no-entrypoint",
] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }